# opentelemetry-auto

./: CHANGELOG.md  README.md  TODOs  auto-instrument-config.json  auto-instrument-config.toml  auto-instrument.cabal  auto_instrument_config.json  cabal.project  hs-opentelemetry-auto.cabal  hs-opentelemetry-instrumentation-auto.cabal  test-config.toml
.github/workflows/: haskell-ci.yml
play/: Main.hs
src/: AutoInstrument.hs
src/AutoInstrument/Internal/: Config.hs  GhcFacade.hs  Otel.hs  Plugin.hs  Types.hs
src/AutoInstrument/Internal/Plugin/: Parser.hs  TypeChecker.hs
test/: Main.hs
